--- a/CourseProject.html
+++ b/CourseProject.html
@@ -48,5 +48,11 @@
 				<span id="FadeOut">Fade out</span>
 			</div>
 		</form>
+		
+		<h1>Show first 100 prime numbers</h1>
+		
+		<span id="PrimeNumber">Prime numbers</span>
+		
+		<label id="primeNumberOutput"> </label>
 	</body>
 </html>
